@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2010, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2013, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -9,7 +9,7 @@
 #include "fost-core.hpp"
 #include <fost/detail/utility.hpp>
 #include <fost/detail/coerce.hpp>
-#include <fost/detail/unicode.hpp>
+#include <fost/unicode.hpp>
 
 #include <fost/exception/unicode_encoding.hpp>
 
